k8s/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-project-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: devops-project
            port:
              number: 5000
      - path: /minio(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9000
